[package]

name = "sandstorm-raw-api-example"
version = "0.0.1"
authors = [ "David Renshaw <dwrenshaw@gmail.com>" ]
edition = "2018"

[[bin]]

name = "server"
path = "src/main.rs"

[dependencies]
capnp = "0.15"
capnp-rpc = "0.15"
futures = "0.3"
mio-uds = "0.6"
sandstorm = "0.0.16"
tokio = { version = "1.0.0", features = ["macros", "net", "rt"]}
tokio-util = { version = "0.6.0", features = ["compat"] }
