[package]

name = "sandstorm-raw-api-example"
version = "0.0.1"
authors = [ "David Renshaw <dwrenshaw@gmail.com>" ]
edition = "2021"

[[bin]]

name = "server"
path = "src/main.rs"

[dependencies]
capnp = "0.19.1"
capnp-rpc = "0.19"
futures = "0.3"
sandstorm = "0.19.0"
tokio = { version = "1.0.0", features = ["macros", "net", "rt"]}
tokio-util = { version = "0.7.0", features = ["compat"] }
